Fix alignment of load more button

--- a/res/style.scss
+++ b/res/style.scss
@@ -560,6 +560,10 @@
     }
 }
 
+.at_loadmore {
+    padding-bottom: 10px !important;
+}
+
 @-moz-document url-prefix() {
     .at_tab {
         padding-left: 8px;
